www/include/style.css
/*

	Nonzero1.0 by nodethirtythree design
	http://www.nodethirtythree.com
	missing in a maze

*/

/* This controls the width of the fluid width layouts */

div.fluid
{
width: 90% !important;
}

/* This controls the width of the fixed width layouts */

div.fixed
{
width: 980px !important;
margin: 0;
}

/* Basic Stuff */

*
{
margin: 0em;
padding: 0em;
}

body
{
background-color: #fff;
color: #585858;
  font-family: "Verdana", "Deja-Vu Sans", "Bitstream Vera Sans", sans-serif;
font-size: 0.9em;
background: #f0f0f0 url(/images/bg.png) repeat;
}

h1,h2,h3,h4,h5,h6
{
font-weight: normal;
letter-spacing: -1px;
text-transform: lowercase;
}

h3,h4,h5,h6
{
color: #66000F;
}

h1 span
{
font-weight: bold;
}

h3 span
{
font-weight: bold;
}

h4 span
{
font-weight: bold;
}

br.clear
{
clear: both;
}

img
{
padding: 3px;
}

img.floatTL
{
float: left;
margin-right: 1.5em;
margin-bottom: 1.5em;
margin-top: 0.5em;
}

img.floatTR
{
float: right;
margin-left: 1.5em;
margin-bottom: 1.5em;
margin-top: 0.5em;
}

img.symbol
{
float: left;
margin-bottom: 0em;
border: 0;
}

a
{
text-decoration: underline;
color: #D90000;
border-style: none;
}

a:hover
{
text-decoration: none;
}

ul.links
{
  /* list-style: none; */
  padding-left: 1em;
}

ul.links li
{
line-height: 1.5em;
font-size: 0.9em;
/* display: inline; */
}

ul.links li.first
{
}

p
{
line-height: 1.5em;
}

/* Header */

#header
{
width:100%;
height:102px;
background: #440000 url('/images/bg1.png') repeat-x;
}

#header_inner
{
position: relative;
width: 980px;
height:102px;
margin: 0 auto;
}

img.symbol
{
margin: 0;
padding: 0;
}

/* Logo */

#logo
{
position: absolute;
top: 0;
float: left;
}

#header h1
{
float: left;
margin-left: 105px;
color: #eee;
font-size: 150%;
}

#header h2
{
float: left;
margin-left: 105px;
color: #E5CCD0;
font-size: 1.0em;
vertical-align: bottom;
}

/* Header Line's */
#line1
{
height: 37px;
}

#line2
{
height: 32px;
}

#line3
{
height: 31px;
}

/* Lang */

#lang
{
position: absolute;
right: 0em;
top: 0em;
}

#lang img
{
float: left;
border: none;
margin-right: 0.5em;
margin-bottom: 1.5em;
margin-top: 0.5em;
width: 30px;
}

/* Menu */

#menu
{
position: absolute;
left: 105px;
top: 0em;
}

#menu ul
{
list-style: none;
}

#menu li
{
float: left;
}
#menu li
{
vertical-align: middle;
background: #333 url('/images/btn-break.png') center;
}
#menu li a
{
margin-left: 1px; /*0.5em;*/
margin-right: 1px;
display: block;
padding: 10px 5px 0 8px;
height: 26px;
background: #333 url('/images/btn-empty.png') repeat-x center;
color: #ddd;
font-weight: bolder;
vertical-align: middle;
font-size: 0.8em;
text-decoration: none;
}

#menu li a.active
{
background: #CA2F2F url('/images/btn-red2.png') repeat-x center;
color: #ddd;
}

#menu li a:hover
{
background: #333 url('/images/btn-red2.png') repeat-x center;
color: #fff;
}

/* Main */

#main
{
/* background: #fff url('images/n2.gif') 0px 1px repeat-x; */
}

#main_inner p
{
text-align: justify;
margin-bottom: 0.5em;
font-size: 0.9em;
}

#main_inner ul
{
margin-bottom: 2.0em;
font-size: 0.9em;
}

#main_inner
{
position: relative;
width: 950px;
margin: 0 auto;
}

#main_inner h3,h4
{
border-bottom: dotted 1px #E1E1E1;
position: relative;
}

#main_inner h3
{
font-size: 2.1em;
padding-bottom: 0.1em;
margin-bottom: 0.5em;
}

#main_inner h4
{
font-size: 1.2em;
padding-bottom: 0.175em;
margin-bottom: 0.25em;
margin-top: 0.95em;
}

#main_inner .post
{
position: relative;
margin-bottom: 2.0em;
}

#main_inner .post h3
{
position: relative;
font-size: 1.7em;
padding-bottom: 0.25em;
}

#main_inner .post ul.post_info , #main_inner .post .post_info
{
list-style: none;
position: absolute;
top: 3em;
font-size: 0.8em;
}

#main_inner .post .post_info
{
width: 100%;
text-align: right;
margin-top: -1.5em;
}
#main_inner .post ul
{
padding-left: 1.0em; 
}

#main_inner .post ul.post_info li
{
background-position: 0em center;
background-repeat: no-repeat;
display: inline;
padding-left: 15px;
}

#main_inner .post ul.post_info li.date
{
background-image: url('images/n5.gif');
}

#main_inner .post ul.post_info li.comments
{
background-image: url('images/n6.gif');
margin-left: 1.1em;
}

table {
  border: 0px;
  border-collapse: collapse;
  border-spacing: 0px;
  margin: 0em;
  padding: 0em;
  width: 980px;
  max-width: 980px;
}
.post table {
  width: 900px;
  max-width: 900px;
  font-size: 0.9em;
}
#sh-tl {
  background: url(/images/sh-tl.png) no-repeat right bottom;
}
#sh-top {
  background: url(/images/sh-top.png) repeat-x bottom;
}
#sh-tr {
  background: url(/images/sh-tr.png) no-repeat left bottom;
}
#sh-lft {
  background: url(/images/sh-lft.png) repeat-y right;
}
#sh-rgt {
  background: url(/images/sh-rgt.png) repeat-y left;
}
#sh-bl {
  background: url(/images/sh-bl.png) no-repeat right top;
}
#sh-btn {
  background: url(/images/sh-btn.png) repeat-x top;
}
#sh-br {
  background: url(/images/sh-br.png) no-repeat left top;
}
#no-sh {
background-color: #f5f5f5;
}
#sh-tl, #sh-top, #sh-tr, #sh-lft, #sh-rgt, #sh-bl, #sh-btn, #sh-br {
  width: 16px;
  height: 16px;
  padding: 0px;
  border-width: 0px;
  border-style: none;
}
.banner {
  border: 0;
}

#nodes {
  width: 720px;
}
#nodes th, #nodes td {
  text-align: left;
}
#nodes td {
  width: 50px;
}
/* Footer */

#footer
{
clear: both;
width: 100%;
height: 26px;
color: #ddd;
text-align: center;
background: url(/images/ft.png) left top;
margin-top: 0em;
margin-bottom: 0em;
padding-top: 1.0em;
text-transform: lowercase;
}

/* Search */

input.button
{
background: #CA2F2F url('images/n3.gif') repeat-x;
color: #fff;
border: solid 1px #A94B4B;
font-weight: bold;
text-transform: lowercase;
font-size: 0.8em;
height: 2.0em;
}

input.text
{
border: solid 1px #F1F1F1;
font-size: 1.0em;
padding: 0.25em 0.25em 0.25em 0.25em;
}

#search
{
position: relative;
width: 100%;
margin-bottom: 2.0em;
}

#search input.text
{
position: absolute;
top: 0em;
left: 0em;
width: 9.5em;
}

#search input.button
{
position: absolute;
top: 0em;
right: 0em;
min-width: 2.0em;
max-width: 2.5em;
}

.thumbnail{
position: relative;
z-index: 0;
}

.thumbnail:hover{
background-color: transparent;
z-index: 50;
}

.thumbnail span{ /*CSS for enlarged image*/
position: absolute;
background-color: lightyellow;
padding: 5px;
left: -1000px;
border: 1px dashed gray;
visibility: hidden;
color: black;
text-decoration: none;
}

.thumbnail span img{ /*CSS for enlarged image*/
border-width: 0;
padding: 2px;
}

.thumbnail:hover span{ /*CSS for enlarged image on hover*/
visibility: visible;
top: 0;
left: 60px; /*position where enlarged image should offset horizontally */

}

.feed {
  margin-left: 3px;
  padding: 0 0 0 19px;
  background: url("/images/feed.png") no-repeat 0 50%;
}

/* LAYOUT - 3 COLUMNS */

	/* Primary content */
	
	#primaryContent_3columns
	{
	position: relative;
	margin-right: 34em;
	}
	
	#columnA_3columns
	{
	position: relative;
	float: left;
	width: 100%;
	margin-right: -34em;
	padding-right: 2em;
	}
	
	/* Secondary Content */
	
	#secondaryContent_3columns
	{
	float: right;
	}
	
	#columnB_3columns
	{
	width: 13.0em;
	float: left;
	padding: 0em 2em 0.5em 2em;
	border-left: dotted 1px #E1E1E1;
	}
	
	#columnC_3columns
	{
	width: 13.0em;
	float: left;
	padding: 0em 0em 0.5em 2em;
	border-left: dotted 1px #E1E1E1;
	}
	
/* LAYOUT - 2 COLUMNS */

	/* Primary content */
	
	#primaryContent_2columns
	{
	position: relative;
	/* margin-right: 17em; */
	}
	
	#columnA_2columns
	{
	position: relative;
	float: left;
	padding: 1em 0.5em 0.5em 1em;
	width: 710px;
	}
	
	/* Secondary Content */
	
	#secondaryContent_2columns
	{
	float: right;
	}
	
	#columnC_2columns
	{
	width: 13.0em;
	float: left;
	padding: 0em 0.5em 0.5em 0.5em;
	border-left: dotted 1px #E1E1E1;
	}

/* LAYOUT - COLUMNLESS */

	/* Primary content */
	
	#primaryContent_columnless
	{
	position: relative;
	}
	
	#columnA_columnless
	{
	position: relative;
	width: 100%;
	}

